##########################
# Setup.py Configuration #
##########################
[metadata]
name = pyobo
version = 0.2.0
description = Handling and writing OBO
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pyobo/pyobo
download_url = https://github.com/pyobo/pyobo/releases
project_urls =
    Bug Tracker = https://github.com/pyobo/pyobo/issues
    Source Code = https://github.com/pyobo/pyobo

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Open Biomedical Ontologies
    OBO

[options]
install_requires =
    dataclasses; python_version < "3.7"
    obonet
    click
    tqdm
    pyyaml
    pandas
    requests
    protmapper
    humanize
    tabulate
    scrapy

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
web =
    flask
    flask-bootstrap
    flasgger

[options.entry_points]
console_scripts =
    obo = pyobo.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pyobo
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/pyobo
    .tox/*/lib/python*/site-packages/pyobo

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
