##########################
# Setup.py Configuration #
##########################
[metadata]
name = pyobo
version = 0.3.3-dev
description = Handling and writing OBO
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pyobo/pyobo
download_url = https://github.com/pyobo/pyobo/releases
project_urls =
    Bug Tracker = https://github.com/pyobo/pyobo/issues
    Source Code = https://github.com/pyobo/pyobo

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Open Biomedical Ontologies
    OBO

[options]
install_requires =
    dataclasses; python_version < "3.7"
    obonet
    click
    tqdm
    pyyaml
    pandas
    requests
    protmapper
    more_itertools
    more_click>=0.0.2
    humanize
    tabulate
    cachier
    pystow
    bioversions>=0.0.9
    bioregistry>=0.0.10
    drugbank_downloader

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
web =
    flask
    bootstrap-flask
    flask-admin
    flasgger
    # psutil is used in the resolver
    psutil
database =
    sqlalchemy
    psycopg2-binary

[options.entry_points]
console_scripts =
    pyobo = pyobo.cli:main
    recurify = pyobo.cli:recurify

pyobo.nomenclatures =
    cgnc             = pyobo.sources.cgnc:get_obo
    chembl.compound  = pyobo.sources.chembl:get_obo
    complexportal    = pyobo.sources.complexportal:get_obo
    conso            = pyobo.sources.conso:get_obo
    covid            = pyobo.sources.covid:get_obo
    drugbank         = pyobo.sources.drugbank:get_obo
    drugbank.salt    = pyobo.sources.drugbank_salt:get_obo
    drugcentral      = pyobo.sources.drugcentral:get_obo
    eccode           = pyobo.sources.expasy:get_obo
    fplx             = pyobo.sources.famplex:get_obo
    gwascentral.phenotype = pyobo.sources.gwascentral_study:get_obo
    gwascentral.study     = pyobo.sources.gwascentral_study:get_obo
    hgnc             = pyobo.sources.hgnc:get_obo
    hgnc.genefamily  = pyobo.sources.hgncgenefamily:get_obo
    interpro         = pyobo.sources.interpro:get_obo
    itis             = pyobo.sources.itis:get_obo
    kegg.genome      = pyobo.sources.kegg.genome:get_obo
    kegg.pathway     = pyobo.sources.kegg.pathway:get_obo
    kegg.genes       = pyobo.sources.kegg.genes:get_obo
    mesh             = pyobo.sources.mesh:get_obo
    mgi              = pyobo.sources.mgi:get_obo
    mirbase          = pyobo.sources.mirbase:get_obo
    mirbase.family   = pyobo.sources.mirbase_family:get_obo
    mirbase.mature   = pyobo.sources.mirbase_mature:get_obo
    msigdb           = pyobo.sources.msigdb:get_obo
    ncbigene         = pyobo.sources.ncbigene:get_obo
    npass            = pyobo.sources.npass:get_obo
    pathbank         = pyobo.sources.pathbank:get_obo
    pfam             = pyobo.sources.pfam:get_obo
    pfam.clan        = pyobo.sources.pfam_clan:get_obo
    pid.pathway      = pyobo.sources.pid:get_obo
    pubchem.compound = pyobo.sources.pubchem:get_obo
    reactome         = pyobo.sources.reactome:get_obo
    rgd              = pyobo.sources.rgd:get_obo
    sgd              = pyobo.sources.sgd:get_obo
    umls             = pyobo.sources.umls:get_obo
    wikipathways     = pyobo.sources.wikipathways:get_obo

pyobo.xrefs =
    cbms2019 = pyobo.xrefdb.sources.cbms2019:get_cbms2019_xrefs_df
    chembl   = pyobo.xrefdb.sources.chembl:get_chembl_xrefs_df
    compath  = pyobo.xrefdb.sources.compath:get_compath_xrefs_df
    famplex  = pyobo.xrefdb.sources.famplex:get_famplex_xrefs_df
    gilda    = pyobo.xrefdb.sources.gilda:get_gilda_xrefs_df
    intact   = pyobo.xrefdb.sources.intact:get_xrefs_df
    ncit     = pyobo.xrefdb.sources.ncit:get_ncit_xrefs_df
    pubchem  = pyobo.xrefdb.sources.pubchem:get_pubchem_mesh_df
    wikidata = pyobo.xrefdb.sources.wikidata:get_wikidata_xrefs_df
    biomappings = pyobo.xrefdb.sources.biomappings:get_biomappings_df


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pyobo
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/pyobo
    .tox/*/lib/python*/site-packages/pyobo

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
